--- a/package.json
+++ b/package.json
@@ -1,44 +1,30 @@
 {
-  "name": "react16-build-ref",
+  "name": "friends",
   "version": "1.0.0",
-  "description": "https://www.valentinog.com/blog/webpack-tutorial/",
+  "description": "",
   "main": "index.js",
   "scripts": {
-    "dev-server": "nodemon --exec babel-node src/server/server.js --ignore dist/",
-    "dev-bundle": "webpack -wd",
-    "test": "jest"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/rexdavinci/react16-build-ref.git"
+    "dev": "webpack-dev-server --open --compress --mode development --progress --hot",
+    "start": "webpack-dev-server --mode development --open --hot",
+    "build": "webpack --mode production --progress"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/rexdavinci/react16-build-ref/issues"
-  },
-  "homepage": "https://github.com/rexdavinci/react16-build-ref#readme",
   "dependencies": {
-    "@babel/cli": "^7.2.3",
-    "@babel/core": "^7.2.2",
-    "@babel/node": "^7.2.2",
-    "@babel/preset-env": "^7.3.1",
-    "@babel/preset-react": "^7.0.0",
-    "babel-loader": "^8.0.5",
-    "express": "^4.16.4",
-    "react": "^16.8.1",
-    "react-dom": "^16.8.1",
-    "webpack": "^4.29.3",
-    "webpack-cli": "^3.2.3"
+    "react": "^16.8.4",
+    "react-dom": "^16.8.4"
   },
   "devDependencies": {
-    "babel-eslint": "^10.0.1",
-    "babel-jest": "^24.1.0",
-    "eslint": "^5.13.0",
-    "eslint-plugin-react": "^7.12.4",
-    "jest": "^24.1.0",
-    "nodemon": "^1.18.9",
-    "react-test-render": "^1.1.1"
+    "@babel/core": "^7.3.4",
+    "@babel/preset-env": "^7.3.4",
+    "@babel/preset-react": "^7.0.0",
+    "babel-loader": "^8.0.5",
+    "css-loader": "^2.1.1",
+    "html-webpack-plugin": "^3.2.0",
+    "style-loader": "^0.23.1",
+    "webpack": "^4.29.6",
+    "webpack-cli": "^3.2.3",
+    "webpack-dev-server": "^3.2.1"
   }
 }
