--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack-dev-server --open --compress --mode development --progress --hot",
+    "dev": "webpack-dev-server  --mode development --open --compress --progress --hot",
     "start": "webpack-dev-server --mode development --open --hot",
     "build": "webpack --mode production --progress"
   },
@@ -17,6 +17,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.3.4",
+    "@babel/plugin-proposal-class-properties": "^7.3.4",
     "@babel/preset-env": "^7.3.4",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.5",
